# CXXcaffe

./: Blob.cpp  Blob.hpp  CMakeLists.txt  Money.docx  README.md  SyncedMemory.cpp  Untitled.md  caffe.md  caffe.proto  layer.cpp  net.cpp  net.hpp  shared_ptr.cpp
include/: Blob.hpp  SyncedMemory.hpp  base_conv_layer.hpp  layer.hpp  net.hpp
include/layers/: base_conv_layer.hpp  batch_norm_layer.hpp  conv_layer.hpp  pooling_layer.hpp
include/util/: im2col.hpp  math_functions.hpp
layers/: base_conv_layer.cpp  batch_norm_layer.cpp  conv_layer.cpp  pooling_layer.cpp
util/: im2col.cpp  math_functions.cpp
